tests/typechecker/should_pass/sub_extensions.csp
datatype X = Y.{0,1}

datatype Z = A.{Y.0}

test3 = extensions(A.Y) == {0,1}
