tests/typechecker/should_fail/module_instances_5.csp
module M(X, Y)
exports
    channel c : X.Y
endmodule

instance M1 = M({1},{\ (_) @ 0})
